This this the changelog file for the Pothos C++ library.

Release 0.3.2 (pending)
==========================

- Fixes for POTHOS_MODULE_UTIL destination and install prefix
- Added conversions between ObjectMap and ObjectKwargs
- Added CMake ENABLE_* flags for internal dependencies

Release 0.3.1 (2016-01-01)
==========================

- The reserve only prevents work when all ports fail
- InputPort::setReserve() only bump for larger setting
- Renamed BlockEval to fix symbol conflict with GUI
- Restored pothos-all metapackage for convenience
- Added pothos (runtime) to libpothos-dev Depends
- Make spuce submodule optional as a dependency
- CMakeLists.txt use newer git submodule syntax
- spuce submodule set to 0.4.2 release tag

Release 0.3.0 (2015-12-16)
==========================

- Absorbed the pothos-util toolkit into lib/Util
- Replaced NamedMutex use with FileLock and std::mutex
- Added templated Q-format/fixed-point conversions
- Added POTHOS_TEST_CLOSE() for equality with tolerance
- Support complex integer toString() and conversions
- Added displayable port alias name to framework APIs
- Support conditional preview mode in block description parser
- Applications can cleanup before exit with deinit()
- Detection logic in input port for queue overflows
- Added network utils for IPv6 with fall-back support
- Improved error reporting and formatting for self tests
- Fixed text fixture symbol declaration for OSX
- Set library SOVERSION using POTHOS_ABI_VERSION
- Use requestTermination in server and fix destructor throw
- RemoteProxyEnvironment reply cache check without blocking
- Bumped API number to "0.3-0" for serialization changes
- Re-implement RPC datagram format with embedded length
- Switch to portable binary Object serialization from EOS

Release 0.2.2 (2015-12-07)
==========================

- Fix Topology::dumpJSON undefined JSON Object behavior
- Buffer accumulator pop all front-most consumed buffers
- Fixed Buffer manager reuse on small consume logic